src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Verticals__c</fullName>
        <label>Content Verticals</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty</fullName>
                </value>
                <value>
                    <fullName>Beer</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Cooking</fullName>
                </value>
                <value>
                    <fullName>DIY</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Fitness</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Gaming</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Home &amp; Garden</fullName>
                </value>
                <value>
                    <fullName>Moms</fullName>
                </value>
                <value>
                    <fullName>Movies</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>News</fullName>
                </value>
                <value>
                    <fullName>Pets</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
                <value>
                    <fullName>Toys</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_Length__c</fullName>
        <label>Available Assets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Static Image</fullName>
                </value>
                <value>
                    <fullName>6 sec. Video</fullName>
                </value>
                <value>
                    <fullName>15 sec. Video</fullName>
                </value>
                <value>
                    <fullName>30 sec. Video</fullName>
                </value>
                <value>
                    <fullName>60+ sec. Video</fullName>
                </value>
                <value>
                    <fullName>60 sec. Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WeeklyReportingSchedule__c</fullName>
        <label>Weekly Reporting Schedule</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>XeroObject__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Xero Object</label>
        <referenceTo>XeroEntity__c</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Xero_Contact__c</fullName>
        <formula>if(!isblank(Xero_ID__c),
     HYPERLINK(&quot;https://go.xero.com/Contacts/View/&quot;&amp;Xero_ID__c, if(!isblank(XeroObject__c), XeroObject__r.XeroName__c ,&quot;View&quot;)) ,
    if (!isblank(Account__r.Xero_Id__c), 
         HYPERLINK(&quot;https://go.xero.com/Contacts/View/&quot;&amp;Account__r.Xero_Id__c, if(!isblank(Account__r.XeroObject__c), Account__r.XeroObject__r.XeroName__c             ,&quot;View&quot;)),
         &quot;Not Synced with Xero&quot;)     
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Xero Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Xero Settings</label>
        <referenceTo>XeroSettings__c</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Xero_ID__c</fullName>
        <label>Xero ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>APAC</fullName>
        <columns>NAME</columns>
        <columns>Project_ID__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Client_IO__c</columns>
        <columns>Client_Spend__c</columns>
        <columns>Account_Type__c</columns>
        <columns>BillingCondition__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>APAC</value>
        </filters>
        <label>APAC</label>
    </listViews>
    <listViews>
        <fullName>APAC_DBM</fullName>
        <columns>NAME</columns>
        <columns>Project_ID__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Client_IO__c</columns>
        <columns>Client_Spend__c</columns>
        <columns>Account_Type__c</columns>
        <columns>BillingCondition__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>APAC</value>
        </filters>
        <filters>
            <field>Platforms__c</field>
            <operation>contains</operation>
            <value>DBM</value>
        </filters>
        <label>APAC DBM</label>
    </listViews>
    <listViews>
        <fullName>All_Client</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Client_Spend__c</columns>
        <columns>Client_IO__c</columns>
        <columns>Project_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Type__c</field>
            <operation>equals</operation>
            <value>Client</value>
        </filters>
        <label>All Client</label>
    </listViews>
    <listViews>
        <fullName>All_Strike</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Client_Spend__c</columns>
        <columns>Client_IO__c</columns>
        <columns>Project_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Type__c</field>
            <operation>equals</operation>
            <value>Strike</value>
        </filters>
        <label>All Strike</label>
    </listViews>
    <listViews>
        <fullName>Commission_to_be_paid</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Project_ID__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Client_Spend__c</columns>
        <columns>Client_IO__c</columns>
        <columns>Commission_Paid__c</columns>
        <columns>Commission_Paid_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>InvoicesPaid__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Commission_Paid__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Commission to be paid</label>
        <sharedTo>
            <role>CEO</role>
            <role>Finance</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Currently_Running</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Brand__c</columns>
        <columns>Project_ID__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Client_Spend__c</columns>
        <columns>Client_IO__c</columns>
        <columns>ClientServicesRep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date_R__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Currently Running</label>
    </listViews>
    <listViews>
        <fullName>Tangible_Rebate</fullName>
        <columns>Project_ID__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Client_Spend__c</columns>
        <columns>Media_Order__c</columns>
        <columns>Final_Margin__c</columns>
        <columns>End_Date__c</columns>
        <columns>AllInvoicesPaidDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>Tangible Media Inc.</value>
        </filters>
        <label>Tangible Rebate</label>
        <sharedTo>
            <group>Finance</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BillingConditionRequired</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp;
ISBLANK(BillingCondition__c)</errorConditionFormula>
        <errorMessage>Fill in Billing Conditions</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CTAoverlayText</fullName>
        <active>false</active>
        <errorConditionFormula>not(BypassValidationRule__c) &amp;&amp; 
!priorvalue(BypassValidationRule__c) &amp;&amp;
CTA_Overlay__c &amp;&amp; isblank(CTAOverlayText__c)</errorConditionFormula>
        <errorMessage>Provide CTA Overlay Text when you mark CTA Overlay. If text is embedded on video type in &quot;Embedded on video&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotEditBrand</fullName>
        <active>false</active>
        <description>Brand cannot be updated.</description>
        <errorConditionFormula>not(BypassValidationRule__c) &amp;&amp; 
!priorvalue(BypassValidationRule__c) &amp;&amp;
$User.Id != &apos;005U0000003nBsV&apos; &amp;&amp; 
NOT(ISBLANK(PRIORVALUE(Brand__c))) &amp;&amp; 
PRIORVALUE(Brand__c) != Brand__c</errorConditionFormula>
        <errorDisplayField>Brand__c</errorDisplayField>
        <errorMessage>Brand cannot be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CompanionBannerRequired</fullName>
        <active>false</active>
        <errorConditionFormula>not(BypassValidationRule__c) &amp;&amp; 
!priorvalue(BypassValidationRule__c) &amp;&amp; 
isblank(text(Companion_Banner__c))</errorConditionFormula>
        <errorMessage>Select Companion Banner value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InsertNAifNoReportingSchedule</fullName>
        <active>true</active>
        <errorConditionFormula>not(BypassValidationRule__c) &amp;&amp; 
!priorvalue(BypassValidationRule__c) &amp;&amp;
isblank(WeeklyReportingSchedule__c)</errorConditionFormula>
        <errorMessage>Insert N/A if no Weekly Reporting Schedule selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_cannot_contain_hyphen</fullName>
        <active>true</active>
        <description>Name can&apos;t contain &quot;-&quot; character</description>
        <errorConditionFormula>not(BypassValidationRule__c) &amp;&amp; 
!priorvalue(BypassValidationRule__c) &amp;&amp; contains(Name,&quot;-&quot;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You cannot use hyphens (-) in Contract name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Provide_Commission_Paid_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Commission_Paid__c &amp;&amp; isblank(Commission_Paid_Date__c)</errorConditionFormula>
        <errorDisplayField>Commission_Paid_Date__c</errorDisplayField>
        <errorMessage>Provide date when commission was paid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RemoveNAwhenSelectingReportingSchedule</fullName>
        <active>true</active>
        <errorConditionFormula>includes(WeeklyReportingSchedule__c,&quot;N/A&quot;) &amp;&amp; 
or( 
includes(WeeklyReportingSchedule__c,&quot;Monday&quot;), 
includes(WeeklyReportingSchedule__c,&quot;Tuesday&quot;), 
includes(WeeklyReportingSchedule__c,&quot;Wednesday&quot;), 
includes(WeeklyReportingSchedule__c,&quot;Thursday&quot;), 
includes(WeeklyReportingSchedule__c,&quot;Friday&quot;), 
includes(WeeklyReportingSchedule__c,&quot;Saturday&quot;), 
includes(WeeklyReportingSchedule__c,&quot;Sunday&quot;) 
)</errorConditionFormula>
        <errorMessage>Remove N/A from Weekly Reporting Schedule list	 if you select any other values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_date_cannot_be_after_end_date</fullName>
        <active>true</active>
        <errorConditionFormula>not(BypassValidationRule__c) &amp;&amp; 
!priorvalue(BypassValidationRule__c) &amp;&amp; Start_Date__c &gt; End_Date__c</errorConditionFormula>
        <errorMessage>Start Date cannot be higher then End Date. Please adjust the dates before saving the record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TagsRequired</fullName>
        <active>false</active>
        <errorConditionFormula>not(BypassValidationRule__c) &amp;&amp; 
!priorvalue(BypassValidationRule__c) &amp;&amp; 
isblank(text(Pixel_Tracking__c))</errorConditionFormula>
        <errorMessage>Select Tags value</errorMessage>
    </validationRules>
</CustomObject>